--- a/source/_posts/2019-11-30.md
+++ b/source/_posts/2019-11-30.md
@@ -11,3 +11,6 @@ hello world
 ```
 
 #### 开始啦！
+来回折腾，博客终于成功上线了。感谢[DIYgod](https://diygod.me/)大佬开源的[Sagiri主题](https://github.com/DIYgod/hexo-theme-sagiri)。
+
+纱雾很可爱，主题也是~~
