--- a/source/_posts/2019-12-06.md
+++ b/source/_posts/2019-12-06.md
@@ -10,9 +10,9 @@ categories: Hexo
 使用Hexo依赖于以下环境和工具：
 
 - [Node.js](https://nodejs.org/en/)（建议10.0及以上版本）
-- [git](https://git-scm.com/)
+- 一个比较友好的cli工具，你可以使用cmd或者Powershell，这里推荐[git](https://git-scm.com/)
 
-安装过程相对简单，此处不再赘述，请自行Google~
+安装过程相对简单，此处不再赘述，请自行`RTFM`~
 
 #### 安装Hexo
 你可以使用如下命令来全局安装Hexo：
@@ -101,7 +101,7 @@ hexo cl
 hexo generate
 hexo s
 ```
-细致如你，一定发现了，这些常用命令存在**简写形式**，更多细节参考[官方文档](https://hexo.io/zh-cn/docs/) ~
+如果你懂得如何通过阅读文档来学习，则会发现这些常用命令存在[简写形式](https://hexo.io/zh-cn/docs/)
 
 #### 更换主题
 [yilia](https://github.com/litten/hexo-theme-yilia)是一个简约美观的博客主题，我们就以此为例来说明如何更换。当然，除了github上开源的主题，[官方](https://hexo.io/themes/)也为我们提供了诸多选择。
