--- a/source/_posts/2020-03-22.md
+++ b/source/_posts/2020-03-22.md
@@ -276,4 +276,4 @@ if(process.env.NODE_ENV === 'development'){
 }
 ```
 运行`npm run dev`打包后，你将会得到你想要的结果。
-细心的小伙伴会注意到，在未指定`mode`字段的时候，webpack会按照`development`模式打包，并且在控制台反馈这一警告，指定后则不会出现。
+你也许会注意到，在未指定`mode`字段的时候，webpack会按照`development`模式打包，并且在控制台反馈这一警告，指定后则不会出现。
