--- a/source/_posts/2019-12-11.md
+++ b/source/_posts/2019-12-11.md
@@ -4,13 +4,13 @@ date: 2019-12-13 21:42:01
 tags: Hexo
 categories: Hexo
 ---
-如果你想让人通过互联网访问到你的博客，那么你有三个选择：
+如果你想让人通过互联网访问到你的博客，那么你有如下几种可能的选择：
 
-- 自己搭建服务器 
+- 搭建vps
 - 购买云主机
-- 使用[github pages](https://pages.github.com/)提供的免费托管服务
+- 使用[github pages](https://pages.github.com/)提供的免费托管服务(除了github，其他的平台或许有类似的服务)
 
-如果你是新手或者学生党，那么推荐你选择第三种方式。本文将介绍以此种方式来部署静态网站。
+推荐选择第三种方式，没别的，因为省钱。本文将介绍以此种方式来部署静态网站。
 
 ### 创建站点存储库
 
@@ -18,7 +18,7 @@ categories: Hexo
 
 <!-- more -->
 
-创建一个名为`[你的用户名].github.io`的存储库。注意，你的存储库**必须**得是这样的命名，否则无效~
+创建一个名为`[你的用户名].github.io`的存储库。注意，你的存储库**最好**是这样的命名（当然你也可以去阅读相关的文档来折腾一下与众不同的方式）
 
 ### 安装git部署插件
 
@@ -35,7 +35,7 @@ ssh-keygen
 接下来控制台会和你对话，问你想要保存在哪里，想要设置什么密码等等，一路回车就好。这样，一切都是默认的设置了👌
 如果你是Win系统，你将在如下目录找到生成的密钥文件`id_rsa`和公钥文件`id_rsa.pub`:
 ```
-C:\Users\你的Windows用户名\.ssh
+C:\Users\[用户名]\.ssh
 ```
 在github点击你的头像，进入设置页；
 找到`SSH and GPG keys`，新建一个SSH key，将`id_rsa.pub`中的内容复制到文本框中：
@@ -83,10 +83,16 @@ www   CNAME   XXXX.github.io
 将`XXXX`替换为github你的用户名即可。
 前者是让你的域名能通过 [cocoonut.top](https://cocoonut.top) 这种形式访问;
 而后者是让你的域名能通过 [www.cocoonut.top](https://cocoonut.top)这种形式访问。
-#### 让博客域名支持HTTPS
-在Chrome浏览器中，没有有效的SSL证书的网页都被标记为“不安全”，如国内某安全卫士旗下的子产品官网：
+#### 让域名支持HTTPS
+某些浏览器会把没有使用https的网页都标记为“不安全”，如国内某安全卫士旗下的子产品官网：
 ![XD](/images/2019-12-11/360.png)
-使用HTTPS协议通信的数据都是加密的，会更加安全，而github也为自定义域名提供了这种服务，启用也非常简单：
+
+{% note info %}
+HTTPS 是基于 HTTP 协议的，不过它会使用 TLS/SSL 来对数据加密。使用 TLS/ SSL 协议，所有的信息都是加密的，第三方没有办法窃听。并且它提供了一种校验机制，信息一旦被篡改，通信的双方会立刻发现。它还配备了身份证书，防止身份被冒充（如中间人攻击）的情况出现。
+{% endnote %}
+使用HTTPS协议通信的数据都是加密的，会更加安全。
+一般的网站若要支持https，需要向域名服务商申请证书，可能需要支付一定的费用。
+我们使用的是GitHub的服务，虽然是国外的站点，但目前为止仍在GFW的白名单，你不需要为你的网站备案，而且github为自定义域名提供了这种服务，启用也非常简单：
 在你的站点仓库下 -> settings 找到Custom domain，填入你的域名；
 勾选Enforce HTTPS 选项。
 
